<resources>
    <string name="app_name">SIM Info &amp; Charging Codes</string>
    <string name="simcode">SIM CHARGING CODES</string>
    <string name="selete_country">Select Country</string>
    <string name="selete_Network">Select Network</string>
    <string name="go">Go</string>
    <string name="auto">Auto Detect Network</string>
    <!--<string name="optional">Optional for some operators</string>-->
    <string name="voucher">Voucher</string>
    <string name="nation_id">National ID</string>
    <string name="option">*Optional for some operators</string>
    <string name="internetconnection_erro">You are not connected to internet</string>

    <string name="Banner_unit_id">ca-app-pub-6164690552161200/1239178572</string>


</resources>
